--- a/src/WeatherFramework.css
+++ b/src/WeatherFramework.css
@@ -40,13 +40,14 @@
 }
 
 .Weather .Form-Control {
-  width: 50%;
+  width: 80%;
   position: relative;
-  left: 20em;
+  left: 24em;
 }
 .Weather .btn {
   position: relative;
-  left: 36em;
+  left: 17em;
+  top: 2em;
   margin-top: 6px;
   color: #16c79a;
   background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
