--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 .App {
-  text-align: left;
   max-width: 600px;
-  margin: 20px auto;
+  margin: 35px auto;
+}
+
+.App footer {
+  font-size: 12px;
+  margin: 10px 0;
 }
 
 body {
