--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,5 +1,29 @@
 .Weather {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   border: 1px solid #dadde1;
+  border-radius: 4px;
+  padding: 16px;
+  background-image: linear-gradient(to right, #92fe9d 0%, #00c9ff 100%);
+}
+
+.Weather h1 {
+  font-size: 50px;
+  font-weight: 100;
+  color: #19456b;
+  line-height: 55px;
+  margin: 20px 0 0 0;
+}
+.Weather ul {
+  margin: 0;
+  padding: 0;
+}
+.Weather li {
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 22px;
+  color: #19456b;
+  list-style: none;
 }
 .Weather .Weather-App {
   padding: 18px;
