--- a/src/Weather.css
+++ b/src/Weather.css
@@ -25,6 +25,29 @@
   color: #19456b;
   list-style: none;
 }
+.Weather img {
+  height: 64px;
+  width: 64px;
+  display: inline-block;
+  margin-right: 10px;
+}
+.Weather .temperature {
+  font-size: 64px;
+  font-weight: 400;
+  text-decoration: none solid rgb(32, 33, 36);
+  color: #202124;
+  line-height: 64px;
+}
+.Weather .unit {
+  position: relative;
+  font-size: 16px;
+  top: -34px;
+  font-weight: 400;
+  color: #202124;
+  margin-left: 5px;
+  line-height: 1;
+}
+
 .Weather .Weather-App {
   padding: 18px;
   border: 1px solid lightgrey;
